# nanobench

./: .cirrus.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  test.html  ubsan.supp
doc/: Doxyfile  conf.py  reference.rst  tutorial.rst
docs/: .buildinfo  .gitignore  CODE_OF_CONDUCT.html  Doxyfile  comparison.html  comparison.md  comparison.rst  conf.py  formatting.html  genindex.html  index.html  index.rst  license.html  objects.inv  reference.html  reference.md  reference.rst  search.html  searchindex.js  templates.rst  tutorial.html  tutorial.md  tutorial.rst
docs/.doctrees/: comparison.doctree  environment.pickle  formatting.doctree  index.doctree  reference.doctree  tutorial.doctree
docs/_sources/: comparison.rst.txt  formatting.rst.txt  index.rst.txt  reference.rst.txt  tutorial.rst.txt
docs/_static/: totalruntime.svgz
src/: .clang-format  CMakeLists.txt
src/cmake/: CMakeLists.txt
src/comparisons/cameron317_microbench/: microbench.cpp
src/comparisons/catchorg_Catch2/: catch.cpp
src/comparisons/google_benchmark/: main.cpp
src/comparisons/iboB_picobench/: picobench.cpp
src/comparisons/nanobench/: main.cpp
src/comparisons/nonius/: main.cpp
src/docs/: Doxyfile  comparison.rst  conf.py  formatting.rst  generate.sh  index.rst  license.rst  reference.md  reference.rst  requirements.txt  tutorial.rst
src/docs/_generated/: mustache.template.json
src/include/: nanobench.h
src/scripts/: all.sh  build.sh  clang-analyze-build.sh  full_example.cpp  full_example_simple.cpp  timer.cpp  toc-insert.sh
src/scripts/lint/: lint-clang-format.py  lint-version.py
src/templates/: boxplot.html  boxplot.mustache  csv.mustache  json.mustache
src/test/: CMakeLists.txt  example_always_the_same.cpp  example_atomic.cpp  example_begin_here.cpp  example_branch_misses.cpp  example_complexity.cpp  example_containers.cpp  example_csv.cpp  example_hide_output.cpp  example_preconfigured_name.cpp  example_pyperf.cpp  example_random2.cpp  example_random_number_generators.cpp  example_random_uniform01.cpp  example_shuffle.cpp  framework_comparison.cpp  mustache_parser.cpp  tutorial_complexity_set.cpp  tutorial_complexity_sort.cpp  tutorial_context.cpp  tutorial_fast_v1.cpp  tutorial_fast_v2.cpp  tutorial_fluctuating_v1.cpp  tutorial_fluctuating_v2.cpp  tutorial_mustache.cpp  tutorial_render_simple.cpp  tutorial_slow_v1.cpp  tutorial_slow_v2.cpp  unit_api.cpp  unit_cold.cpp  unit_cpp17_api.cpp  unit_exact_iters_and_epochs.cpp  unit_multi_bench.cpp  unit_random.cpp  unit_romutrio.cpp  unit_templates.cpp  unit_timeunit.cpp  unit_to_s.cpp
src/test/app/: CMakeLists.txt  nanobench.cpp
